Add /v1 prefix to the api
